# mtdf-rs

./: Cargo.toml  README.md
examples/: tictactoe.rs  wythoff.rs
src/: game.rs  lib.rs  mtdf.rs
