[package]
name = "mtdf"
version = "0.1.0"
edition = "2021"
description = "A (bad) Rust implementation of the MTD(f) algorithm."
categories = ["game-development"]
keywords = ["ai", "game", "minimax", "mtdf"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jacob-Dentes/mtdf-rs/tree/main"

[dependencies]
dashmap = "6.1.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
rustc-hash = "2.1.1"
